add_executable(test0a test0a.cpp)
add_test(test0a test0a)

add_executable(test0b test0b.cpp)
add_test(test0b test0b)

add_executable(test0c test0c.cpp)
add_test(test0c test0c)

add_executable(test0d test0d.cpp)
add_test(test0d test0d)

add_executable(test0e test0e.cpp)
add_test(test0e test0e)

add_executable(test0f test0f.cpp)
add_test(test0f test0f)