add_executable(test5a test5a.cpp)
add_test(test5a test5a)

add_executable(test5b test5b.cpp)
add_test(test5b test5b)

add_executable(test5c test5c.cpp)
add_test(test5c test5c)

# add_executable(test5d test5d.cpp)
# add_test(test5d test5d)

# add_executable(test5e test5e.cpp)
# add_test(test5e test5e)

add_executable(test5f test5f.cpp)
add_test(test5f test5f)

# add_executable(test5g test5g.cpp)
# add_test(test5g test5g)

add_executable(test5h test5h.cpp)
add_test(test5h test5h)
