add_executable(test4a test4a.cpp)
add_test(test4a test4a)

add_executable(test4b test4b.cpp)
add_test(test4b test4b)

add_executable(test4c test4c.cpp)
add_test(test4c test4c)

add_executable(test4d test4d.cpp)
add_test(test4d test4d)

add_executable(test4e ../copyable test4e.cpp)
add_test(test4e test4e)

add_executable(test4f ../copyable test4f.cpp)
add_test(test4f test4f)
